--- a/application.yml
+++ b/application.yml
@@ -1,7 +1,20 @@
+spring:
+  # datasource:
+  #   url: jdbc:mysql://localhost:3306/CabBookingSystem
+  #   username: ${DB_USERNAME}  
+  #   password: ${DB_PASSWORD}  # Injected via environment variable at runtime
+  #   driver-class-name: com.mysql.cj.jdbc.Driver
+
+  # jpa:
+  #   hibernate:
+  #     ddl-auto: update
+  #   show-sql: true
+  application:
+    name: User
+
 eureka:
   client:
     register-with-eureka: true
     fetch-registry: true
     service-url:
       defaultZone: http://localhost:8761/eureka/
-
