--- a/User.yml
+++ b/User.yml
@@ -10,7 +10,7 @@ spring:
   #     ddl-auto: update
   #   show-sql: true
   application:
-    name: User
+    name: User-service
 
 eureka:
   client:
