--- a/application.yml
+++ b/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: User
   # datasource:
   #   url: jdbc:mysql://localhost:3306/CabBookingSystem
   #   username: ${DB_USERNAME}  
@@ -9,8 +11,7 @@ spring:
   #   hibernate:
   #     ddl-auto: update
   #   show-sql: true
-  application:
-    name: User-service
+
 
 eureka:
   client:
