--- a/User.yml
+++ b/User.yml
@@ -1,16 +1,16 @@
 spring:
   application:
     name: driver
-  datasource:
-    url: jdbc:mysql://localhost:3306/CabBookingSystem
-    username: ${DB_USERNAME}  
-    password: ${DB_PASSWORD}  # Injected via environment variable at runtime
-    driver-class-name: com.mysql.cj.jdbc.Driver
+  # datasource:
+  #   url: jdbc:mysql://localhost:3306/CabBookingSystem
+  #   username: ${DB_USERNAME}  
+  #   password: ${DB_PASSWORD}  # Injected via environment variable at runtime
+  #   driver-class-name: com.mysql.cj.jdbc.Driver
 
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
+  # jpa:
+  #   hibernate:
+  #     ddl-auto: update
+  #   show-sql: true
 
 
 eureka:
