--- a/User.yml
+++ b/User.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: driver
+    name: User
   # datasource:
   #   url: jdbc:mysql://localhost:3306/CabBookingSystem
   #   username: ${DB_USERNAME}  
