--- a/application.yml
+++ b/application.yml
@@ -1,16 +1,27 @@
 spring:
-  application:
-    name: User
-  # datasource:
-  #   url: jdbc:mysql://localhost:3306/CabBookingSystem
-  #   username: ${DB_USERNAME}  
-  #   password: ${DB_PASSWORD}  # Injected via environment variable at runtime
-  #   driver-class-name: com.mysql.cj.jdbc.Driver
+  datasource:
+    url: jdbc:mysql://localhost:3306/CabBookingSystem
+    username: ${DB_USERNAME}  
+    password: ${DB_PASSWORD}  # Injected via environment variable at runtime
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
-  # jpa:
-  #   hibernate:
-  #     ddl-auto: update
-  #   show-sql: true
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+
+
+logging:
+  level:
+    root: info
+    org.springframework.mail: DEBUG
+    org.springframework.mail.javamail: DEBUG
+    com.sun.mail.smtp: DEBUG
+    com.sun.mail.util: DEBUG
 
 
 eureka:
